--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,14 +25,27 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - JWT_EXPIRES_IN=${JWT_EXPIRES_IN}
 
-  # business-ms-sf:
-  #   build: ./business-ms-sf
-  #   volumes:
-  #     - ./business-ms-sf/src:/usr/src/app/src
-  #   command: npm run start:dev
-  #   environment:
-  #     - NATS_SERVERS=nats://nats-server:4222
-  #     - DATABASE_URL=${BUSINESS_DATABASE_URL}
+  business-ms-sf:
+    build: ./business-ms-sf
+    volumes:
+      - ./business-ms-sf/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - NATS_SERVERS=nats://nats-server:4222
+      - DATABASE_URL=${BUSINESS_DATABASE_URL}
+    depends_on:
+      - business-ms-db
+  
+  business-ms-db:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_BUSINESS_DB}
+    volumes:
+      - ./postgres/business-db:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   # exams-ms-sf:
   #   build: ./exams-ms-sf
