fix: update submodule URLs and commits for exams-taking-ms-sf, business-ms-sf, client-gateway-sf, exams-ms-sf, and users-ms-sf

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = git@github.com:ShroudSoft/notification-ms-sf.git
 [submodule "exams-taking-ms-sf"]
 	path = exams-taking-ms-sf
-	url = git@github.com:ShroudSoft/exams-taking-ms-sf.gitq
+	url = git@github.com:ShroudSoft/exams-taking-ms-sf.git
